[package]
name = "flot"
version = "0.1.3"
authors = ["Steve Donovan <steve.j.donovan@gmail.com>"]

description = "Generate HTML documents with embedded charts using Flot"
documentation = "https://docs.rs/flot"
repository = "https://github.com/stevedonovan/flot-rs"
readme = "readme.md"
license="MIT"

keywords = ["flot","charts","command-line","graphs"]

[dependencies]
json = "0.11.8"
typed-arena = "1.3.0"

